# py-advanced-selector

./: .gitignore  README.md  pyproject.toml
src/advanced_selector/: __init__.py  colors.py  keyboard.py  menu.py  wrapper.py  xlib.py
tests/: sample.py
