[project]
name = "advancedselector" 
version = "3.1.0" 
authors = [
  { name="kougen", email="info@kou-gen.net" },
]

maintainers = [
  { name="Joshua Hegedus", email="josh.hegedus@outlook.com" },
]

description = "Cross platform terminal selector implemented in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "getch; os_name != 'nt'",
]

[project.urls]
Homepage = "https://github.com/kougen/py-advanced-selector"
Issues = "https://github.com/kougen/py-advanced-selector/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
